Removendo do ar a nova aba de realivação

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -441,7 +441,7 @@ div.tab a:focus, .active {
 <script type="text/javascript">
 		var _gaq = _gaq || [];
     var today = new Date();
-    var nomeMes = new Array ("janeiro", "fevereiro", "março", "abril", "maio", "junho", "julho", "agosto", "setembro", "outubro", "novembro", "dezembro")
+    var nomeMes = new Array ("janeiro", "fevereiro", "março", "abril", "maio", "junho", "julho", "agosto", "setembro", "outubro", "novembro", "dezembro");
 
     document.getElementById('time').innerHTML=today.getDate() + " " + nomeMes[today.getMonth()] + " " + today.getFullYear();
 		_gaq.push(['_setAccount', 'UA-13203805-2']);
