--- a/templates/content/pt-br/document/documentos-norteadores.html
+++ b/templates/content/pt-br/document/documentos-norteadores.html
@@ -32,7 +32,7 @@
 
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="http://www.iucnredlist.org/documents/RL_Standards_Consistency.pdf">
+  <a href="http://s3.amazonaws.com/iucnredlist-newcms/staging/public/attachments/3109/redlistguidelines.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores1.jpg"/>
 <div class="portfolio-overlay">
     <p>Documentação padrão e consistência para os critérios e categorias IUCN.</p>
