Adicionando novas fotos e mapas DD no perfil das espécies.

--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -164,7 +164,7 @@
   </div>
 
   <div class="item">
-      <img src="{{static_url}}/images/equipe/Duda.jpg"/>
+      <img src="{{static_url}}/images/equipe/Duda2.jpg"/>
       <p align="justify"><strong>Eduardo Fernandez</strong>
       é biólogo, mestre em Diversidade e Conservação de Plantas pela University of Reading, UK (2016). Sua experiência concentra-se nas áreas de botânica, ecologia da paisagem e fitogeografia, além de especialização em genética aplicada à conservação. Ainda, possui interesse em temas como biodiversidade de ecossistemas de montanhas tropicais e história evolutiva de vegetação campestre no neotrópico. No CNCFlora, desde 2010, desempenhava a função de analista do Núcleo Lista Vermelha e participava da organização e execução de expedições científicas à áreas prioritárias. Atualmente, é analista dos Núcleos Planejamento de Ações e Inventário Florístico em Áreas Prioritárias, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e determinação do material botânico durante as expedições ao campo. Eduardo é boleiro de carteirinha, montanhista por natureza e assíduo devorador de livros das mais diferentes temáticas, principalmente filosofia e história natural.
       <br />
