--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -46,7 +46,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
           </p>
       </div>
       <div class="item">
-          <img src="{{static_url}}/images/equipe/masculino.png"/>
+          <img src="{{static_url}}/images/equipe/Icaro.jpg"/>
           <p align="justify"><strong>Ícaro de Carvalho</strong>
           é cientista da computação, formado pela Universidade Federal Fluminense - UFF (2016). Sua experiência está relacionada ao desenvolvimento web, mobile e em metodologias ágeis. Seu trabalho de conclusão de curso foi em computação gráfica e, atualmente, tem interesse em pesquisar modelos gráficos para visualização de informação/dados que possam atender inúmeras áreas de estudo, não apenas para informática. No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora; pelo desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia. Ícaro também é jogador de rugby e como todo programador, adora um bom café!
             <br/>
