--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -72,7 +72,7 @@
 
 <div class="item">
   <h3>Bruno Ribeiro</h3>
-  <img src="{{static_url}}/images/equipe/masculino.png"/>
+  <img src="{{static_url}}/images/equipe/Bruno.jpeg"/>
   <p align="justify"> É biólogo, mestre em Ecologia e Evolução pela Universidade Federal de Goiás - UFG (2016). Sua experiência está relacionada com a avaliação da vulnerabilidade de espécies às mudanças climáticas e prioridades para conservação, com foco na Amazônia brasileira. No CNCFlora é analista do Núcleo Planejamento Espacial para Conservação ⎼ sob a coordenação do Prof. Rafael Loyola, diretor do Laboratório de Biogeografia da Conservação (CB-Lab/UFG) ⎼ onde participa de todos os processos envolvidos nas análises de paisagem e priorização espacial para a conservação da flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Bruno gosta de literatura, meditação, estar com sua família e amigos, tocar uma boa música com seu violão e mantém a identificação de plantas como um passatempo!<br/><br/>
     <strong><a href="http://lattes.cnpq.br/4793431181653951" target="_blank">Currículo lattes</a></strong><br />
     <strong>Email:</strong> bruno.ribeiro@cncflora.net<br/>
@@ -81,7 +81,7 @@
 
 <div class="item">
   <h3>Caio Baez Gomes</h3>
-  <img src="{{static_url}}/images/equipe/masculino.png"/>
+  <img src="{{static_url}}/images/equipe/Cai.jpg"/>
   <p align="justify"> É biólogo, formado pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2015). Sua experiência concentra-se na área de botânica, com ênfase em inventários florísticos e fitossociológicos da flora de campos de altitude e de florestas altomontanas do estado do Rio de Janeiro. No CNCFlora divide a sua função de analista entre os Núcleos Lista Vermelha e Inventário Florístico em Áreas Prioritárias, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo e pela coleta e determinação do material botânico. Caio adora fazer trilhas, subir montanhas, andar de bicicleta e mergulhar!<br/><br/><br/>
     <strong><a href="http://lattes.cnpq.br/9726906288362684" target="_blank">Currículo lattes</a></strong><br />
     <strong>Email:</strong> caiobg@cncflora.net<br/>
@@ -107,7 +107,7 @@
 
 <div class="item">
   <h3>Eduardo Fernandez</h3>
-  <img src="{{static_url}}/images/equipe/Duda.jpg"/>
+  <img src="{{static_url}}/images/equipe/Duda2.jpg"/>
   <p align="justify"> É biólogo, mestre em Diversidade e Conservação de Plantas pela University of Reading, UK (2016). Sua experiência concentra-se nas áreas de botânica, ecologia da paisagem e fitogeografia, além de especialização em genética aplicada à conservação. Ainda, possui interesse em temas como biodiversidade de ecossistemas de montanhas tropicais e história evolutiva de vegetação campestre no neotrópico. No CNCFlora, desde 2010, desempenhava a função de analista do Núcleo Lista Vermelha e participava da organização e execução de expedições científicas à áreas prioritárias. Atualmente, é analista dos Núcleos Planejamento de Ações e Inventário Florístico em Áreas Prioritárias, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e determinação do material botânico durante as expedições ao campo. Eduardo é boleiro de carteirinha, montanhista por natureza e assíduo devorador de livros das mais diferentes temáticas, principalmente filosofia e história natural.
   <br/><strong><a href="http://lattes.cnpq.br/0339764153484153" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> efernandez@cncflora.jbrj.gov.br
@@ -144,7 +144,7 @@
 
 <div class="item">
   <h3>Ícaro de Carvalho</h3>
-  <img src="{{static_url}}/images/equipe/masculino.png"/>
+  <img src="{{static_url}}/images/equipe/Icaro.jpg"/>
   <p align="justify"> É cientista da computação, formado pela Universidade Federal Fluminense - UFF (2016). Sua experiência está relacionada ao desenvolvimento web, mobile e em metodologias ágeis. Seu trabalho de conclusão de curso foi em computação gráfica e, atualmente, tem interesse em pesquisar modelos gráficos para visualização de informação/dados que possam atender inúmeras áreas de estudo, não apenas para informática. No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora; pelo desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia. Ícaro também é jogador de rugby e como todo programador, adora um bom café!<br/><br/><br/>
     <strong>Email:</strong> icaro@cncflora.net
   </p>
@@ -152,7 +152,7 @@
 
 <div class="item">
   <h3>Júlio Perota</h3>
-  <img src="{{static_url}}/images/equipe/Julio.jpeg"/>
+  <img src="{{static_url}}/images/equipe/Julio.jpg"/>
   <p align="justify"> É publicitário, bacharel em Propaganda e Marketing pela Pontifícia Universidade Católica de Campinas - PUC/Campinas, com Master of Business Administration (MBA) em Gerenciamento de Projetos pela Fundação Getúlio Vargas. Sua experiência está relacionada ao gerenciamento de projetos, desde a concepção até a implementação com os mecanismos que estabelecem estruturas e indicadores para maior eficiência organizacional. No CNCFlora desempenha a sua função junto à coordenação geral, onde é responsável pelo gerenciamento de projetos (planejamento, implementação, monitoramento e controle das etapas) e de recursos do BID, pela elaboração dos relatórios de gestão,  gestão de custos, cronograma e contratos, pela apresentação de documentos para auditorias, gestão e melhoria de processos (licitações e compras), pelo conflito de gestão e pela organização de eventos. Júlio adora ler e curtir momentos em família!
     <br /><br />
     <strong>Email:</strong> julioperota@cncflora.net
@@ -188,7 +188,7 @@
 
 <div class="item">
   <h3>Melissa Bocayuva</h3>
-  <img src="{{static_url}}/images/equipe/feminino.png"/>
+  <img src="{{static_url}}/images/equipe/Melissa.jpg"/>
   <p align="justify"> É bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora. Melissa adora viajar, conhecer parques, plantar e curtir a natureza!
   <br /><br /><br/>
     <strong><a href="http://lattes.cnpq.br/7249624264500739" target="_blank">Currículo lattes</a></strong><br/>
@@ -206,7 +206,7 @@
 
 <div class="item">
   <h3>Patrícia da Rosa</h3>
-  <img src="{{static_url}}/images/equipe/feminino.png"/>
+  <img src="{{static_url}}/images/equipe/Patricia.jpg"/>
   <p align="justify"> É bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2015). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia e sistemática de Melastomataceae, em florística de vegetação campestre do Pampa e da Mata Atlântica. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ela ainda é responsável por organizar e planejar as visitas aos herbários, as expedições à campo e pela coleta e determinação do material botânico. Patrícia adora ouvir samba e música popular brasileira, praticar Yoga e natação, andar de bicicleta, viajar e ir à campo!<br/><br/><br/>
     <strong><a href="http://lattes.cnpq.br/2113703294879709" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> patricia@cncflora.net
