--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -223,7 +223,7 @@
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
 
     <div class="item">
-    <img src="{{static_url}}/images/equipe/masculino.png"/>
+    <img src="{{static_url}}/images/equipe/Cai.jpg"/>
       <p align="justify"><strong>Caio Baez Gomes</strong>
        é biólogo, formado pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2015). Sua experiência concentra-se na área de botânica, com ênfase em inventários florísticos e fitossociológicos da flora de campos de altitude e de florestas altomontanas do estado do Rio de Janeiro. No CNCFlora divide a sua função de analista entre os Núcleos Lista Vermelha e Inventário Florístico em Áreas Prioritárias, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo e pela coleta e determinação do material botânico. Caio adora fazer trilhas, subir montanhas, andar de bicicleta e mergulhar!<br/>
         <strong><a href="http://lattes.cnpq.br/9726906288362684" target="_blank">Currículo lattes</a></strong><br />
@@ -251,7 +251,7 @@
     </div>
 
     <div class="item">
-      <img src="{{static_url}}/images/equipe/feminino.png"/>
+      <img src="{{static_url}}/images/equipe/Patricia.jpg"/>
       <p align="justify">
       <Strong>Patrícia da Rosa</Strong> é bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2015). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia e sistemática de Melastomataceae, em florística de vegetação campestre do Pampa e da Mata Atlântica. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ela ainda é responsável por organizar e planejar as visitas aos herbários, as expedições à campo e pela coleta e determinação do material botânico. Patrícia adora ouvir samba e música popular brasileira, praticar Yoga e natação, andar de bicicleta, viajar e ir à campo!
       <br />
